modules/gdscript/tests/scripts/parser/errors/uid_invalid.gd
@uid("not a valid uid")

func test():
    pass
